--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(calkernel)
 export(cv.acSSPCA)
 export(cv.partition.acSSPCA)
 export(deflate)
+export(deflate.rfast)
 export(get.psi)
 export(get.resid.apply)
 export(get.resid.parallel)
