--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(acssimpls)
 export(calkernel)
 export(cv.acSSPCA)
 export(cv.partition.acSSPCA)
+export(cv.partition.acSSPCA.lambda)
 export(deflate)
 export(deflate.rfast)
 export(get.psi)
@@ -21,6 +22,7 @@ export(get.resid.single)
 export(get.residual)
 export(getnorm2)
 export(mat.fill)
+export(matrix.fill)
 export(model.build.SSPCA)
 export(model.metric.SSPCA)
 export(proj)
